# GPR-200-FA23

assignments/assignment1_helloTriangle/: CMakeLists.txt  glHelpers.cpp  glHelpers.h  launch.vs.json  main.cpp  shader.cpp  shader.h
assignments/assignment1_helloTriangle/Shaders/: BasicFrag.fs  BasicVertex.vert
assignments/assignment2_sunset/: main.cpp
assignments/assignment2_sunset/assets/: BasicFrag.frag  BasicVertex.vert
assignments/assignment3_textures/: main.cpp
assignments/assignment3_textures/assets/: backgroundFrag.frag  backgroundVert.vert  characterFrag.frag  characterVert.vert
assignments/assignment4_transformations/: main.cpp
assignments/assignment4_transformations/assets/: vertexShader.vert
assignments/assignment5_camera/: main.cpp
assignments/assignment5_camera/assets/: vertexShader.vert
assignments/assignment6_proceduralGeometry/: main.cpp
assignments/assignment7_lighting/: main.cpp
assignments/assignment7_lighting/assets/: defaultLit.frag  defaultLit.vert  unLit.vert
assignments/final_project/: CMakeLists.txt  main.cpp
assignments/final_project/assets/: defaultLit.vert  unLit.frag  unLit.vert
core/: CMakeLists.txt
core/GizmosLib/Animation/: Animation.cpp  Animation.h  Animator.h
core/GizmosLib/Engine/Animation/: animation.cpp  animation.h
core/GizmosLib/Engine/Animator/: animator.h
core/GizmosLib/Engine/GameObject/: gameObject.cpp  gameObject.h
core/GizmosLib/Engine/Time/: time.cpp  time.h
core/GizmosLib/GameObject/: GameObject.cpp  GameObject.h
core/GizmosLib/Math/: camera.h  gizmosMath.h  matrix.cpp  matrix.h  transformations.h  vector.h
core/GizmosLib/Math/Matrix/: matrix.h
core/GizmosLib/OpenGL/: glHelpers.cpp  glHelpers.h  mesh.h  procGen.cpp  procGen.h  shaderProgram.cpp  shaderProgram.h
core/GizmosLib/Sprite/: Sprite.cpp  Sprite.h
core/ew/: mesh.cpp  mesh.h  procGen.cpp  procGen.h  transform.h
(+18 files in other folders)
